fix ui issue of toggle button and font size on mobile screen

--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -74,18 +74,18 @@
   top: -9000px;
   left: -9000px;
 }
-.toggle + label {
+
+label {
   background-color: #757575;
   width: 2.66rem;
-  height: 1.25rem;
-  display: flex;
-  align-items: center;
+  height: 1.33rem;
+  display: inline-block;
   border-radius: 30px;
   position: relative;
   cursor: pointer;
 }
 
-.toggle + label::after {
+label::after {
   content: "";
   position: absolute;
   width: 1rem;
@@ -93,13 +93,17 @@
   background-color: #fff;
   display: block;
   border-radius: 50%;
-  transform: translate(20%);
-  transition: transform 200ms ease-in-out;
+  top: 50%;
+  left: 10%;
+
+  // right: 50%;
+  transform: translateY(-50%);
+  transition: left 100ms ease-in-out;
 }
 
 .toggle:checked + label::after {
-  transform: translate(150%);
-  transition: transform 200ms ease-in-out;
+  // right: 10%;
+  left: 50%;
 }
 
 .toggle:checked + label {
@@ -108,7 +112,7 @@
 
 .theme-switcher {
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 
 .moon {
