--- a/src/Search/Search.scss
+++ b/src/Search/Search.scss
@@ -10,7 +10,7 @@
   border-radius: 8px;
   border: none;
   background-color: #f4f4f4;
-  font-size: 1.2rem;
+  font-size: clamp(14px, 1.5vmax, 18px);
   color: #57585e;
 
   &:focus {
@@ -25,11 +25,12 @@
 
 .search-icon {
   position: absolute;
-  right: 2%;
+  right: 0%;
   top: 50%;
   transform: translateY(-50%);
   font-size: 1.2rem;
   color: #a445ed;
+  margin-right: 1.5rem;
 }
 
 .error {
