--- a/src/WordInfo/WordInfo.scss
+++ b/src/WordInfo/WordInfo.scss
@@ -69,6 +69,7 @@
   font-size: 3.5rem;
   //   color: rgb(19, 24, 41);
   font-weight: 800;
+  margin-bottom: 1rem;
 }
 
 .phonetic {
