--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -150,7 +150,7 @@ body {
     padding: 0 1rem;
   }
   html {
-    font-size: 11px;
+    font-size: clamp(13px, 1.7vmax, 18px);
   }
 }
 
@@ -159,6 +159,6 @@ body {
     padding: 0 1rem;
   }
   html {
-    font-size: 13px;
+    font-size: clamp(15px, 1.7vmax, 18px);
   }
 }
